--- a/config.toml
+++ b/config.toml
@@ -5,12 +5,12 @@ cache_url = "https://julycrow.github.io/MyArxiv/cache.json"
 [[sources]]
 limit = 150
 category = "cs.CL"
-title = "Computation and Language"
+title = "map learning"
 
 [[sources]]
 limit = 150
 category = "cs.CV"
-title = "Computer Vision and Pattern Recognition"
+title = "hd map "
 
 [[sources]]
 limit = 150
