--- a/config.toml
+++ b/config.toml
@@ -27,4 +27,4 @@ title = "Computer Vision and Pattern Recognition"
 highlight_title = "scripts/highlight_title.rhai"
 highlight_author = "scripts/highlight_author.rhai"
 highlight_conference = "scripts/highlight_conference.rhai"
-match_titile =  "scripts/match_titile.rhai"
+match_title =  "scripts/match_title.rhai"
