--- a/config.toml
+++ b/config.toml
@@ -28,3 +28,4 @@ highlight_title = "scripts/highlight_title.rhai"
 highlight_author = "scripts/highlight_author.rhai"
 highlight_conference = "scripts/highlight_conference.rhai"
 match_title =  "scripts/match_title.rhai"
+count_highlight = "scripts/count_highlight.rhai"
